--- a/buildspec_eks.yml
+++ b/buildspec_eks.yml
@@ -41,5 +41,5 @@ phases:
       - echo Pushing the Docker image...
       - docker push $AWS_ACCOUNT_ID.dkr.ecr.$AWS_DEFAULT_REGION.amazonaws.com/$IMAGE_REPO_NAME:$IMAGE_TAG
       - echo Push the latest image to cluster
-      - kubectl apply -f deployment.yaml
-      - kubectl rollout restart -f deployment.yaml
+      - kubectl apply -f Expensetracker/deployment.yaml
+      - kubectl rollout restart -f Expensetracker/deployment.yaml
